# ai-explainer

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
nginx/: default.conf
src/ai_explainer/: auth.py  config.py  db.py  evidence.py  llm_explain.py  main.py  mock_store.py  models.py
