[tool.poetry]
name = "ai-explainer"
version = "0.1.0"
description = ""
authors = ["kwish <kwish@snu.ac.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}
sse-starlette = "^3.1.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.11.0"
langchain = "^1.2.1"
langchain-openai = "^1.1.6"
langchain-core = "^1.2.6"
sqlalchemy = "^2.0.43"
asyncmy = "^0.2.10"


[tool.poetry.group.dev.dependencies]
ruff = "^0.14.10"
mypy = "^1.19.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
